YTDB-505-qodana-changes